--- a/quan_ly_tai_nguyen_rung/quan_ly_tai_nguyen_rung.csproj
+++ b/quan_ly_tai_nguyen_rung/quan_ly_tai_nguyen_rung.csproj
@@ -13,10 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\NewFolder\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
